--- a/part2/phonebook/src/App.styles.css
+++ b/part2/phonebook/src/App.styles.css
@@ -7,8 +7,8 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
-  width: 900px;
-
+  min-width: 600px;
+  max-width: max-content;
 }
 
 h1 {
@@ -21,33 +21,42 @@ h2 {
   margin-bottom: 10px;
 }
 
+form > div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 input {
   margin: 5px;
-}
-
-input[type=text] {
-  width: 100%;
   padding: 5px;
+  flex-grow: 1;
 }
-
-input[type=number] {
-  width: 100%;
-  padding: 5px;
-}
-
-
 
 table {
   border-collapse: collapse;
   width: 100%;
 }
 
-button {
-  background-color: #4CAF50;
+.delete {
+  background-color: #ec615c;
   border: none;
   color: white;
   cursor: pointer;
   margin: 5px;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.add {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin: 0 auto;
   padding: 5px 10px;
   text-align: center;
   text-decoration: none;
@@ -70,4 +79,8 @@ th {
 
 td {
   padding: 8px;
+}
+
+.hidden {
+  display: none;
 }
