--- a/part2/phonebook/src/App.styles.css
+++ b/part2/phonebook/src/App.styles.css
@@ -84,3 +84,31 @@ td {
 .hidden {
   display: none;
 }
+
+.notification {
+  /* Display notification in bottom right corner of screen */
+  position: fixed;
+  bottom: 0;
+  right: 0;
+
+  color: green;
+  border: 2px solid green;
+  background-color: #a2eca5;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.error {
+  /* Display notification in bottom left corner of screen */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  
+  color: red;
+  border: 2px solid red;
+  background-color: #fdc5c3;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+}
